# cortex

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Dockerfile  README.md  cortex.example.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
deploy/: cortex-sync.service  cortex-sync.timer  cortex.service
docs/: bare-metal.md  http-exposure.md  mcp-gateway.md  multi-user.md  openapi.yaml  release-checklist.md  security-review-v2.md  upgrading-v2.md  v2-design.md
scripts/: smoke-v2.sh
src/cortex/: __init__.py  access.py  admin.py  api.py  auth.py  cli.py  config.py  gateway.py  gitlog.py  ldap.py  oauth.py  pwhash.py  scopes.py  search_index.py  serialization.py  server.py  sessions.py  users.py  vault.py  vaults.py  webapp.py
src/cortex/db/: __init__.py  admin_import.py  core.py  repos.py
src/cortex/janitor/: __init__.py
src/cortex/llm/: __init__.py  anthropic_provider.py  base.py  openai_compat.py
src/cortex/sync/: __init__.py
src/cortex/web_dist/: index.html
src/cortex/web_dist/assets/: icons-BpeTWGeE.js  index-BD8taTV8.js  index-BW5VlzXS.js  index-BrwitGZF.css  index-CCxj1ywN.css  (+10 more)
tests/: test_admin.py  test_api.py  test_core.py  test_db.py  test_gateway.py  test_http.py  test_janitor.py  test_ldap.py  test_llm.py  test_multivault.py  test_oauth.py  test_search_index.py  test_security.py  test_sync.py  test_users.py  test_vaults.py  test_write.py
tests/fixtures/: stdio_mcp_server.py
vault/Welcome/: Hello Cortex.md
web/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  styles.css
