[project]
name = "cortex-memory"
version = "0.2.0"
description = "A governed Obsidian-vault memory layer for AI agents, served over MCP."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Cortex contributors" }]
keywords = ["mcp", "memory", "vault", "obsidian", "agents", "chatbots", "ai"]

dependencies = [
    "mcp>=1.2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40.0"]
openai = ["openai>=1.0.0"]
ldap = ["ldap3>=2.9"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
cortex = "cortex.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cortex"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
